--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
+    "axios": "^1.6.8",
     "expo": "~50.0.17",
     "expo-screen-orientation": "~6.4.1",
     "expo-status-bar": "~1.11.1",
