--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
     "axios": "^1.6.8",
-    "expo": "~50.0.17",
-    "expo-screen-orientation": "~6.4.1",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.8",
+    "expo-screen-orientation": "~7.0.5",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.74.1",
+    "react-native-paper": "^5.12.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
