--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "^51.0.8",
     "expo-screen-orientation": "~7.0.5",
     "expo-status-bar": "~1.12.1",
+    "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-paper": "^5.12.3"
