--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "0.74.1",
-    "react-native-paper": "^5.12.3"
+    "react-native-paper": "^5.12.3",
+    "expo-av": "~14.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
