--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@react-navigation/native": "^6.1.17",
     "axios": "^1.6.8",
     "expo": "^51.0.8",
+    "expo-av": "~14.0.5",
     "expo-screen-orientation": "~7.0.5",
     "expo-status-bar": "~1.12.1",
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-paper": "^5.12.3",
-    "expo-av": "~14.0.5"
+    "expo-speech": "~12.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
