--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.8",
     "expo": "^51.0.8",
     "expo-av": "~14.0.5",
+    "expo-linear-gradient": "~13.0.2",
     "expo-screen-orientation": "~7.0.5",
     "expo-speech": "~12.0.2",
     "expo-status-bar": "~1.12.1",
@@ -21,7 +22,9 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-dropdown-select-list": "^2.0.5",
-    "react-native-paper": "^5.12.3"
+    "react-native-gifted-charts": "^1.4.10",
+    "react-native-paper": "^5.12.3",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
