--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "app-tl",
-    "slug": "app-tl",
+    "name": "MAVE",
+    "slug": "MAVE",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
