--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-EXPO_PUBLIC_BACKEND_URL=http://192.168.100.73:4000
+# EXPO_PUBLIC_BACKEND_URL=http://192.168.100.73:4000
+EXPO_PUBLIC_BACKEND_URL=https://backend-app-tl-production.up.railway.app
