--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gifted-charts": "^1.4.10",
     "react-native-paper": "^5.12.3",
-    "react-native-svg": "15.2.0"
+    "react-native-svg": "15.2.0",
+    "react-native-gesture-handler": "~2.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
